--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,1 +1,46 @@
+* {
+    box-sizing: border-box;
+    background-color: #026370;
+    color: antiquewhite;
+}
 
+body {
+    font-family: 'Neucha', cursive;
+    font-size: 1.2rem;
+}
+
+.App {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+}
+
+h1 {
+    margin-top: 4%;
+    font-size: 2.7rem;
+    font-family: 'Fascinate', cursive;
+}
+
+#main-info {
+    margin-top: 1%;
+    margin-right: 30%;
+    margin-left: 30%;
+}
+
+button {
+    border-radius: 1rem;
+    padding: .6rem;
+    border-color: black;
+    
+}
+
+#score-buttons {
+    display: flex;
+    justify-content: space-around;
+    margin-left: 5%;
+}
+
+#reveal-btn {
+    margin-top: 6%;
+}
